tests/ui/invalid-attribute-syntax.stderr
error: Unknown builder attribute. Supported attributes: required, setter_name, setter_prefix, default, skip_setter, impl_into, converter
 --> tests/ui/invalid-attribute-syntax.rs:6:15
  |
6 |     #[builder(invalid_attribute)]
  |               ^^^^^^^^^^^^^^^^^
